{
    "name": "ButtleInput",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "2bef5d76-33bf-4da1-b9cd-3ce95778ca2a",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "519bc561-621c-4aa4-977e-bb37c2fbc787",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RankUp",
                    "type": "Button",
                    "id": "b095c378-3601-4e6a-9a8e-921105da62d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LiftUp",
                    "type": "Button",
                    "id": "a9a612ab-6e9e-4b05-9b30-e0aafca3312f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.3,pressPoint=0.3)",
                    "initialStateCheck": false
                },
                {
                    "name": "LiftDown",
                    "type": "Button",
                    "id": "f3e14016-83a0-4324-9eca-c27e41b400d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.05,pressPoint=0.05)",
                    "initialStateCheck": false
                },
                {
                    "name": "Repair",
                    "type": "Button",
                    "id": "f8e49450-bdb0-4ed0-9f55-fee483790b45",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LaunchCrystal1",
                    "type": "Button",
                    "id": "6591692c-f010-4413-a1f9-1dfcb4b8b9a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LaunchCrystal2",
                    "type": "Button",
                    "id": "c5d911d3-6481-4605-8cd5-d337d8e2222a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LaunchCrystal3",
                    "type": "Button",
                    "id": "53a5619f-6304-44b8-b1cf-da0a092b1f65",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LaunchCrystal4",
                    "type": "Button",
                    "id": "335d50be-4df0-433f-a9bb-1795cd6979b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LaunchCrystal5",
                    "type": "Button",
                    "id": "64b68263-84f7-4e66-bd02-c12e0a9928a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dd780c94-bd73-4df7-8165-3a311016ed99",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "013ca20d-08af-455f-a6d8-fa55d67ab7e4",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4983af7a-3e7f-4a8b-812a-783af0dff6aa",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b41df812-269d-47dd-90dd-f067c0f847f4",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b98437b6-0a90-4607-84f0-963e11639f42",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0e83b61a-526c-4f7a-9d5b-61317063bbc8",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "19443d8e-6037-4de9-807d-b25c12e8e577",
                    "path": "<Keyboard>/v",
                    "interactions": "Hold(duration=1)",
                    "processors": "Scale",
                    "groups": "",
                    "action": "RankUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ecaf4b9f-6188-43ef-9c1c-97931de6bc1b",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LiftUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb55cd42-0676-4d3a-910b-7170c172a377",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LiftDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "542aacfc-5c4e-4447-aa2b-71d63cfd790b",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Repair",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4110f288-f7e1-4584-bed3-6a5e06ee2819",
                    "path": "<Keyboard>/1",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "LaunchCrystal1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f06fdcf-8d1d-4ca3-a779-99bb91c42934",
                    "path": "<Keyboard>/2",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "LaunchCrystal2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba370e64-c050-4b3e-b6be-d4fabe531b74",
                    "path": "<Keyboard>/3",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "LaunchCrystal3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42efbdd2-7372-4fe2-a511-b697dfaae132",
                    "path": "<Keyboard>/4",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "LaunchCrystal4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b2ef21c-bf05-4075-9d0c-b3799bcff72c",
                    "path": "<Keyboard>/5",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "LaunchCrystal5",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}